Uranium Abilities + fixes

--- a/honkalculate.template.html
+++ b/honkalculate.template.html
@@ -683,7 +683,11 @@
 
                     <div class="gen-specific g3 g4 g5 g6 g7 g8 g9" style="width: 22.2em; margin: 5px auto;" title="Select the current weather condition.">
                         <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Darkness" id="darkness" />
-                        <label class="btn btn-small btn-mid" for="darkness">Darkness</label>
+                        <label class="btn btn-small btn-left" for="darkness">Darkness</label>
+                        <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Fallout" id="fallout" />
+                        <label class="btn btn-small btn-mid" for="fallout">Fallout</label>
+                        <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Thunderstorm" id="thunderstorm" />
+                        <label class="btn btn-small btn-left" for="thunderstorm">Thunderstorm</label>
                     </div>
 
                     <div class="gen-specific g6 g7 g8 g9" title="Select the current weather condition.">
