--- a/honkalculate.html
+++ b/honkalculate.html
@@ -683,7 +683,11 @@
 
                     <div class="gen-specific g3 g4 g5 g6 g7 g8 g9" style="width: 22.2em; margin: 5px auto;" title="Select the current weather condition.">
                         <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Darkness" id="darkness" />
-                        <label class="btn btn-small btn-mid" for="darkness">Darkness</label>
+                        <label class="btn btn-small btn-left" for="darkness">Darkness</label>
+                        <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Fallout" id="fallout" />
+                        <label class="btn btn-small btn-mid" for="fallout">Fallout</label>
+                        <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Thunderstorm" id="thunderstorm" />
+                        <label class="btn btn-small btn-left" for="thunderstorm">Thunderstorm</label>
                     </div>
 
                     <div class="gen-specific g6 g7 g8 g9" title="Select the current weather condition.">
@@ -937,7 +941,7 @@
     </script>
     <script type="text/javascript" src="./calc/util.js?8fa0c7ff"></script>
     <script type="text/javascript" src="./calc/stats.js?9220179f"></script>
-    <script type="text/javascript" src="./calc/data/species.js?8da78df0"></script>
+    <script type="text/javascript" src="./calc/data/species.js?e422c408"></script>
     <script type="text/javascript" src="./js/data/sets/gen9.js?f0d3a645"></script>
     <script type="text/javascript" src="./js/data/sets/gen8.js?19fe9da0"></script>
     <script type="text/javascript" src="./js/data/sets/gen7.js?17da0a9b"></script>
@@ -949,26 +953,26 @@
     <script type="text/javascript" src="./js/data/sets/gen1.js?8c71d659"></script>
     <script type="text/javascript" src="./calc/data/types.js?2fbce890"></script>
     <script type="text/javascript" src="./calc/data/natures.js?04f00dc5"></script>
-    <script type="text/javascript" src="./calc/data/abilities.js?b149d567"></script>
+    <script type="text/javascript" src="./calc/data/abilities.js?fdf35796"></script>
     <script type="text/javascript" src="./calc/data/moves.js?2a306c7b"></script>
     <script type="text/javascript" src="./calc/data/items.js?5e5f959c"></script>
     <script type="text/javascript" src="./calc/data/index.js?083d2bc9"></script>
     <script type="text/javascript" src="./calc/move.js?01e033ea"></script>
     <script type="text/javascript" src="./calc/pokemon.js?21c9790d"></script>
-    <script type="text/javascript" src="./calc/field.js?d5cfd38d"></script>
+    <script type="text/javascript" src="./calc/field.js?96c5119a"></script>
     <script type="text/javascript" src="./calc/items.js?3cbea98f"></script>
-    <script type="text/javascript" src="./calc/mechanics/util.js?ae52d67e"></script>
-    <script type="text/javascript" src="./calc/mechanics/gen789.js?77279270"></script>
+    <script type="text/javascript" src="./calc/mechanics/util.js?b05f4e16"></script>
+    <script type="text/javascript" src="./calc/mechanics/gen789.js?cfd541eb"></script>
     <script type="text/javascript" src="./calc/mechanics/gen56.js?ff3cad3d"></script>
     <script type="text/javascript" src="./calc/mechanics/gen4.js?9282e6f7"></script>
     <script type="text/javascript" src="./calc/mechanics/gen3.js?1c9c21f5"></script>
     <script type="text/javascript" src="./calc/mechanics/gen12.js?9c9fcd6e"></script>
     <script type="text/javascript" src="./calc/calc.js?cd072314"></script>
-    <script type="text/javascript" src="./calc/desc.js?2dabfbd3"></script>
+    <script type="text/javascript" src="./calc/desc.js?3d755c0c"></script>
     <script type="text/javascript" src="./calc/result.js?d5c7552b"></script>
     <script type="text/javascript" src="./calc/adaptable.js?afeb3759"></script>
     <script type="text/javascript" src="./calc/index.js?2377cbc8"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?bab94ec6"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?a7b8f42c"></script>
     <script type="text/javascript" src="./js/honkalculate_controls.js?dc815947"></script>
 
     <div style="clear:both;padding:20px;text-align:left">Created by Honko, maintained by Austin and Kris
