closing items fix

--- a/index.html
+++ b/index.html
@@ -2015,7 +2015,7 @@
     <div id="item-box-frame-right" class="box-frame" hidden>
         <div class="box-frame-header" data-x="500"data-y="500">
             <legend>Items</legend>
-            <div class="close-frame" id="close-item-box">X</div>
+            <div class="close-frame" id="close-item-box-r">X</div>
         </div>
         <div class="item-box-body">
             <legend>Common</legend>
@@ -2301,7 +2301,7 @@
     </script>
     <script type="text/javascript" src="./calc/util.js?8fa0c7ff"></script>
     <script type="text/javascript" src="./calc/stats.js?9220179f"></script>
-    <script type="text/javascript" src="./calc/data/species.js?d4fef14b"></script>
+    <script type="text/javascript" src="./calc/data/species.js?ab2f541c"></script>
     <script type="text/javascript" src="./js/data/sets/gen9.js?122bd2fc"></script>
     <script type="text/javascript" src="./js/data/sets/gen8.js?19fe9da0"></script>
     <script type="text/javascript" src="./js/data/sets/gen7.js?17da0a9b"></script>
@@ -2332,7 +2332,7 @@
     <script type="text/javascript" src="./calc/result.js?d5c7552b"></script>
     <script type="text/javascript" src="./calc/adaptable.js?afeb3759"></script>
     <script type="text/javascript" src="./calc/index.js?2377cbc8"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?15cd13a2"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?8c38dcbe"></script>
     <script type="text/javascript" src="./js/index_randoms_controls.js?e53c78dc"></script>
     <script type="text/javascript" src="./js/moveset_import.js?1b00314d"></script>
 </div>
