--- a/index.template.html
+++ b/index.template.html
@@ -2015,7 +2015,7 @@
     <div id="item-box-frame-right" class="box-frame" hidden>
         <div class="box-frame-header" data-x="500"data-y="500">
             <legend>Items</legend>
-            <div class="close-frame" id="close-item-box">X</div>
+            <div class="close-frame" id="close-item-box-r">X</div>
         </div>
         <div class="item-box-body">
             <legend>Common</legend>
