Tanukief, Nebulant, Zorblob

--- a/honkalculate.template.html
+++ b/honkalculate.template.html
@@ -430,6 +430,28 @@
                                 <option value="8">Eight heads</option>
                                 <option value="9">Nine heads</option>
                             </select>
+                            <select hidden aria-label="Coat" class="coat calc-trigger">
+                                <option value="Bug">Bug</option>
+                                <option value="Dark">Dark</option>
+                                <option value="Dragon">Dragon</option>
+                                <option value="Electric">Electric</option>
+                                <option value="Fairy">Fairy</option>
+                                <option value="Fire">Fire</option>
+                                <option value="Fighting">Fighting</option>
+                                <option value="Flying">Flying</option>
+                                <option value="Ghost">Ghost</option>
+                                <option value="Grass">Grass</option>
+                                <option value="Ground">Ground</option>
+                                <option value="Ice">Ice</option>
+                                <option value="Normal">Normal</option>
+                                <option value="Poison">Poison</option>
+                                <option value="Psychic">Psychic</option>
+                                <option value="Rock">Rock</option>
+                                <option value="Steel">Steel</option>
+                                <option value="Water">Water</option>
+                                <option value="Nuclear">Nuclear</option>
+                                <option value="Cosmic">Cosmic</option>
+                            </select>
                             <select hidden aria-label="Boosted Stat" title="What stat is boosted by this ability?" class="boostedStat calc-trigger">
                                 <option value="auto">Auto-Select</option>
                                 <option value="">Inactive</option>
