--- a/index.html
+++ b/index.html
@@ -514,6 +514,28 @@
                                 <option value="8">Eight heads</option>
                                 <option value="9">Nine heads</option>
                             </select>
+                            <select hidden aria-label="Coat" class="coat calc-trigger">
+                                <option value="Bug">Bug</option>
+                                <option value="Dark">Dark</option>
+                                <option value="Dragon">Dragon</option>
+                                <option value="Electric">Electric</option>
+                                <option value="Fairy">Fairy</option>
+                                <option value="Fire">Fire</option>
+                                <option value="Fighting">Fighting</option>
+                                <option value="Flying">Flying</option>
+                                <option value="Ghost">Ghost</option>
+                                <option value="Grass">Grass</option>
+                                <option value="Ground">Ground</option>
+                                <option value="Ice">Ice</option>
+                                <option value="Normal">Normal</option>
+                                <option value="Poison">Poison</option>
+                                <option value="Psychic">Psychic</option>
+                                <option value="Rock">Rock</option>
+                                <option value="Steel">Steel</option>
+                                <option value="Water">Water</option>
+                                <option value="Nuclear">Nuclear</option>
+                                <option value="Cosmic">Cosmic</option>
+                            </select>
                             <select hidden aria-label="Boosted Stat" title="What stat is boosted by this ability?" class="boostedStat calc-trigger">
                                 <option value="auto">Auto-Select</option>
                                 <option value="">Inactive</option>
@@ -1523,6 +1545,28 @@
                                 <option value="8">Eight heads</option>
                                 <option value="9">Nine heads</option>
                             </select>
+                            <select hidden aria-label="Coat" class="coat calc-trigger">
+                                <option value="Bug">Bug</option>
+                                <option value="Dark">Dark</option>
+                                <option value="Dragon">Dragon</option>
+                                <option value="Electric">Electric</option>
+                                <option value="Fairy">Fairy</option>
+                                <option value="Fire">Fire</option>
+                                <option value="Fighting">Fighting</option>
+                                <option value="Flying">Flying</option>
+                                <option value="Ghost">Ghost</option>
+                                <option value="Grass">Grass</option>
+                                <option value="Ground">Ground</option>
+                                <option value="Ice">Ice</option>
+                                <option value="Normal">Normal</option>
+                                <option value="Poison">Poison</option>
+                                <option value="Psychic">Psychic</option>
+                                <option value="Rock">Rock</option>
+                                <option value="Steel">Steel</option>
+                                <option value="Water">Water</option>
+                                <option value="Nuclear">Nuclear</option>
+                                <option value="Cosmic">Cosmic</option>
+                            </select>
                             <select hidden aria-label="Boosted Stat" title="What stat is boosted by this ability?" class="boostedStat calc-trigger">
                                 <option value="auto">Auto-Select</option>
                                 <option value="">Inactive</option>
@@ -2301,7 +2345,7 @@
     </script>
     <script type="text/javascript" src="./calc/util.js?8fa0c7ff"></script>
     <script type="text/javascript" src="./calc/stats.js?9220179f"></script>
-    <script type="text/javascript" src="./calc/data/species.js?87c34e86"></script>
+    <script type="text/javascript" src="./calc/data/species.js?46b066c5"></script>
     <script type="text/javascript" src="./js/data/sets/gen9.js?e85c7a5e"></script>
     <script type="text/javascript" src="./js/data/sets/gen8.js?19fe9da0"></script>
     <script type="text/javascript" src="./js/data/sets/gen7.js?17da0a9b"></script>
@@ -2313,26 +2357,26 @@
     <script type="text/javascript" src="./js/data/sets/gen1.js?8c71d659"></script>
     <script type="text/javascript" src="./calc/data/types.js?639eb993"></script>
     <script type="text/javascript" src="./calc/data/natures.js?04f00dc5"></script>
-    <script type="text/javascript" src="./calc/data/abilities.js?7f81e8b7"></script>
+    <script type="text/javascript" src="./calc/data/abilities.js?6be9975c"></script>
     <script type="text/javascript" src="./calc/data/moves.js?38d61d90"></script>
     <script type="text/javascript" src="./calc/data/items.js?f616e9e5"></script>
     <script type="text/javascript" src="./calc/data/index.js?083d2bc9"></script>
     <script type="text/javascript" src="./calc/move.js?01e033ea"></script>
-    <script type="text/javascript" src="./calc/pokemon.js?21c9790d"></script>
+    <script type="text/javascript" src="./calc/pokemon.js?ba7006f9"></script>
     <script type="text/javascript" src="./calc/field.js?96c5119a"></script>
     <script type="text/javascript" src="./calc/items.js?3cbea98f"></script>
-    <script type="text/javascript" src="./calc/mechanics/util.js?dd0c9b9a"></script>
-    <script type="text/javascript" src="./calc/mechanics/gen789.js?78c31af5"></script>
+    <script type="text/javascript" src="./calc/mechanics/util.js?03857389"></script>
+    <script type="text/javascript" src="./calc/mechanics/gen789.js?2f048d5c"></script>
     <script type="text/javascript" src="./calc/mechanics/gen56.js?ff3cad3d"></script>
     <script type="text/javascript" src="./calc/mechanics/gen4.js?9282e6f7"></script>
     <script type="text/javascript" src="./calc/mechanics/gen3.js?1c9c21f5"></script>
     <script type="text/javascript" src="./calc/mechanics/gen12.js?9c9fcd6e"></script>
     <script type="text/javascript" src="./calc/calc.js?cd072314"></script>
-    <script type="text/javascript" src="./calc/desc.js?56ae0ff8"></script>
+    <script type="text/javascript" src="./calc/desc.js?aadad1e0"></script>
     <script type="text/javascript" src="./calc/result.js?d5c7552b"></script>
     <script type="text/javascript" src="./calc/adaptable.js?afeb3759"></script>
     <script type="text/javascript" src="./calc/index.js?2377cbc8"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?584cbc7e"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?079867ae"></script>
     <script type="text/javascript" src="./js/index_randoms_controls.js?117a207f"></script>
     <script type="text/javascript" src="./js/moveset_import.js?1b00314d"></script>
 </div>
